INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)

IF(BUILD_SHARED_LIBS)
	IF(IVFWIN32)
		ADD_DEFINITIONS(-DIVF_DLL -DFL_DLL)
	ENDIF(IVFWIN32)
ENDIF(BUILD_SHARED_LIBS)

IF(IVFWIN32)
	IF(IVFDEBUG)
		ADD_EXECUTABLE(texture_tutd ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( texture_tutd ivfd ivfuid ivfimaged )
	ELSE(IVFDEBUG)
		ADD_EXECUTABLE(texture_tut ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( texture_tut ivf ivfui ivfimage )
	ENDIF(IVFDEBUG)		
ELSE(IVFWIN32)
	ADD_EXECUTABLE(texture_tut ${SOURCE_FILES})
	TARGET_LINK_LIBRARIES(texture_tut ivf ivfui ivfimage)
ENDIF(IVFWIN32)
