INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.c)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/glad/*.h)

IF(WIN32)
	IF(IVF_DEBUG)
		ADD_LIBRARY(gladd ${INCLUDE_FILES} ${SOURCE_FILES})
		INSTALL_TARGETS( /lib gladd )
	ELSE(IVF_DEBUG)
		ADD_LIBRARY(glad ${INCLUDE_FILES} ${SOURCE_FILES})
		INSTALL_TARGETS( /lib glad )
	ENDIF(IVF_DEBUG)
ELSE(WIN32)
	ADD_LIBRARY(glad ${SOURCE_FILES})
	INSTALL_TARGETS( /lib glad )
	message("INSTALL GLAD files...")
	INSTALL_FILES( /include/glad ${ivf_SOURCE_DIR}/include/glad/*.h)
ENDIF(WIN32)