include_directories(${ivf_SOURCE_DIR}/include)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivf3dui/*.h)

if(BUILD_SHARED_LIBS)
  add_definitions(-DIVF_DLL -DIVF3DUI_LIB)
endif(BUILD_SHARED_LIBS)

if(IVF_DEBUG)
  add_library(ivf3duid ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivf3duid ivfd ivfmathd gleivfd)
  install_targets(/lib ivf3duid)
else(IVF_DEBUG)
  add_library(ivf3dui ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivf3dui ivf ivfmath gleivf)
  install_targets(/lib ivf3dui)
endif(IVF_DEBUG)
