include_directories(${ivf_SOURCE_DIR}/include)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivfctl/*.h)

if(BUILD_SHARED_LIBS)
  add_definitions(-DIVF_DLL -DIVFCTL_LIB)
endif(BUILD_SHARED_LIBS)

if(IVF_DEBUG)
  add_library(ivfctld ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivfctld ivfd)
  install_targets(/lib ivfctld)
else()
  add_library(ivfctl ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivfctl ivf)
  install_targets(/lib ivfctl)
endif()
