INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivffile/*.h)

IF(BUILD_SHARED_LIBS)
	ADD_DEFINITIONS(-DIVF_DLL -DIVFFILE_LIB)
ENDIF(BUILD_SHARED_LIBS)

IF(WIN32)
	IF(IVF_DEBUG)
		ADD_LIBRARY(ivffiled ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivffiled ivfd ivfimaged )
		INSTALL_TARGETS( /lib ivffiled )
	ELSE(IVF_DEBUG)
		ADD_LIBRARY(ivffile ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivffile ivf ivfimage )
		INSTALL_TARGETS( /lib ivffile )
	ENDIF(IVF_DEBUG)
ELSE(WIN32)
	ADD_LIBRARY(ivffile ${SOURCE_FILES})
	TARGET_LINK_LIBRARIES( ivffile ivf ivfimage )
	INSTALL_TARGETS( /lib ivffile )
ENDIF(WIN32)


