include_directories(${ivf_SOURCE_DIR}/include)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivffile/*.h)

if(BUILD_SHARED_LIBS)
  add_definitions(-DIVF_DLL -DIVFFILE_LIB)
endif(BUILD_SHARED_LIBS)

if(IVF_DEBUG)
  add_library(ivffiled ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivffiled ivfd ivfimaged)
  install_targets(/lib ivffiled)
else(IVF_DEBUG)
  add_library(ivffile ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivffile ivf ivfimage)
  install_targets(/lib ivffile)
endif(IVF_DEBUG)
