INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivffltk/*.h)

IF(BUILD_SHARED_LIBS)
	IF(WIN32)
		ADD_DEFINITIONS(-DFL_DLL -DIVF_DLL -DIVFFLTK_LIB)
	ENDIF(WIN32)
	SET(FLTKLIBS_DEBUG fltkdlld)
	SET(FLTKLIBS_RELEASE fltkdll)
ELSE(BUILD_SHARED_LIBS)
	SET(IVFLIBS_DEBUG fltkd fltkgld)
	SET(IVFLIBS_RELEASE fltk fltkgl)
ENDIF(BUILD_SHARED_LIBS)

IF(WIN32)
	IF(IVF_DEBUG)
		ADD_LIBRARY(ivffltkd ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivffltkd ivfd ivfwidgetd fltk fltk_gl fltk_forms fltk_images wsock32 comctl32 )
		INSTALL_TARGETS( /lib ivffltkd )
	ELSE(IVF_DEBUG)
		ADD_LIBRARY(ivffltk ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivffltk ivf ivfwidget fltk fltk_gl fltk_forms fltk_images wsock32 comctl32 )
		INSTALL_TARGETS( /lib ivffltk )
	ENDIF(IVF_DEBUG)
ELSE(WIN32)
	ADD_LIBRARY(ivffltk ${SOURCE_FILES})
	TARGET_LINK_LIBRARIES( ivffltk fltk fltk_gl fltk_forms fltk_images)
	INSTALL_TARGETS( /lib ivffltk )
ENDIF(WIN32)

