IF(WIN32)
	INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
ELSE(WIN32)
	INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include ${FREETYPE_INCLUDE} ${FREETYPE_CONFIG})
	LINK_DIRECTORIES(${FREETYPE_LIBS})
ENDIF(WIN32)

FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivffont/*.h)

IF(BUILD_SHARED_LIBS)
	ADD_DEFINITIONS(-DIVF_DLL -DIVFFONT_LIB )
	IF(WIN32)
		SET(FONT_LIBS ftgl freetype )
		SET(FONT_DEBUG_LIBS ftgl_D freetype2 )
	ELSE(WIN32)
		IF(APPLE)
			SET(FONT_LIBS ftgl freetype)
			SET(FONT_DEBUG_LIBS ftgld freetype)
		ELSE(APPLE)
			SET(FONT_LIBS ftgl ftgl freetype )
			SET(FONT_DEBUG_LIBS ftgld freetype )
		ENDIF(APPLE)
	ENDIF(WIN32)		
ELSE(BUILD_SHARED_LIBS)
	IF(WIN32)
		ADD_DEFINITIONS(-DFTGL_LIBRARY_STATIC)
		SET(FONT_LIBS ftgl_static freetype )
		SET(FONT_DEBUG_LIBS ftgl_static_D freetype )
	ELSE(WIN32)
		IF(APPLE)
			SET(FONT_LIBS ftgl freetype)
			SET(FONT_DEBUG_LIBS ftgld freetype)
		ELSE(APPLE)
			SET(FONT_LIBS ftgl freetype )
			SET(FONT_DEBUG_LIBS ftgld freetype )
		ENDIF(APPLE)
	ENDIF(WIN32)	
ENDIF(BUILD_SHARED_LIBS)

IF(WIN32)
	IF(IVFDEBUG)
		ADD_LIBRARY(ivffontd ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivffontd ivfd ${FONT_DEBUG_LIBS} )
		INSTALL_TARGETS( /lib ivffontd )
	ELSE(IVFDEBUG)
		ADD_LIBRARY(ivffont ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivffont ivf ${FONT_LIBS} )
		INSTALL_TARGETS( /lib ivffont )
	ENDIF(IVFDEBUG)
ELSE(WIN32)
	ADD_LIBRARY(ivffont ${SOURCE_FILES})
	TARGET_LINK_LIBRARIES( ivffont ivf ${FONT_LIBS})
	INSTALL_TARGETS( /lib ivffont )
ENDIF(WIN32)


