if(WIN32)
  include_directories(${ivf_SOURCE_DIR}/include)
else(WIN32)
  include_directories(${ivf_SOURCE_DIR}/include ${FREETYPE_INCLUDE}
                      ${FREETYPE_CONFIG})
  link_directories(${FREETYPE_LIBS})
endif(WIN32)

file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivffont/*.h)

if(IVF_DEBUG)
  add_library(ivffontd ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivffontd ivfd ${FONT_DEBUG_LIBS})
  install_targets(/lib ivffontd)
else()
  add_library(ivffont ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivffont ivf ${FONT_LIBS})
  install_targets(/lib ivffont)
endif()
