INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivfgle/*.h)

IF(BUILD_SHARED_LIBS)
ADD_DEFINITIONS(-DIVF_DLL -DIVFGLE_LIB)
ENDIF(BUILD_SHARED_LIBS)

IF(WIN32)
	IF(IVF_DEBUG)
		ADD_LIBRARY(ivfgled ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivfgled ivfd ivfmathd opengl32 glu32 gleivfd )
		INSTALL_TARGETS( /lib ivfgled )
	ELSE(IVF_DEBUG)
		ADD_LIBRARY(ivfgle ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivfgle ivf ivfmath opengl32 glu32 gleivf )
		INSTALL_TARGETS( /lib ivfgle )
	ENDIF(IVF_DEBUG)		
ELSE(WIN32)
	ADD_LIBRARY(ivfgle ${SOURCE_FILES})
        IF(APPLE)
                TARGET_LINK_LIBRARIES( ivfgle ivf ivfmath "-framework Carbon" "-framework Cocoa" "-framework ApplicationServices" "-framework AGL" "-framework OpenGL" gleivf )
        ELSE(APPLE)
                TARGET_LINK_LIBRARIES( ivfgle ivf ivfmath GL GLU gleivf )
        ENDIF(APPLE)	
	INSTALL_TARGETS( /lib ivfgle )
ENDIF(WIN32)

