include_directories(${ivf_SOURCE_DIR}/include)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivfgle/*.h)

if(BUILD_SHARED_LIBS)
  add_definitions(-DIVF_DLL -DIVFGLE_LIB)
endif(BUILD_SHARED_LIBS)

if(IVF_DEBUG)
  add_library(ivfgled ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivfgled ivfd ivfmathd gleivfd)
  install_targets(/lib ivfgled)
else()
  add_library(ivfgle ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivfgle ivf ivfmath gleivf)
  install_targets(/lib ivfgle)
endif() 
