INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivfglut/*.h)

IF(IVF_SHARED)
	IF(WIN32)
		ADD_DEFINITIONS( -DIVF_DLL )
	ENDIF(WIN32)
ENDIF(IVF_SHARED)

IF(WIN32)
	IF(IVF_DEBUG)
		ADD_LIBRARY(ivfglutd ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivfglutd ivfd ivfwidgetd FreeGLUT::freeglut)
		INSTALL_TARGETS( /lib ivfglutd )
	ELSE(IVF_DEBUG)
		ADD_LIBRARY(ivfglut ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivfglut ivf ivfwidget FreeGLUT::freeglut)
		INSTALL_TARGETS( /lib ivfglut )
	ENDIF(IVF_DEBUG)
ELSE(WIN32)
	ADD_LIBRARY(ivfglut ${SOURCE_FILES})
	TARGET_LINK_LIBRARIES( ivfglut ivf ivfwidget FreeGLUT::freeglut)
	INSTALL_TARGETS( /lib ivfglut )
ENDIF(WIN32)

