include_directories(${ivf_SOURCE_DIR}/include)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivfglut/*.h)

if(IVF_SHARED)
  if(WIN32)
    add_definitions(-DIVF_DLL)
  endif(WIN32)
endif(IVF_SHARED)

if(IVF_DEBUG)
  add_library(ivfglutd ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivfglutd ivfd ivfwidgetd FreeGLUT::freeglut)
  install_targets(/lib ivfglutd)
else()
  add_library(ivfglut ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivfglut ivf ivfwidget FreeGLUT::freeglut)
  install_targets(/lib ivfglut)
endif()
