include_directories(${ivf_SOURCE_DIR}/include)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivfimage/*.h)

if(IVF_DEBUG)
  add_library(ivfimaged ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivfimaged ivfd PNG::PNG JPEG::JPEG ZLIB::ZLIB)
  install_targets(/lib ivfimaged)
else()
  add_library(ivfimage ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivfimage ivf PNG::PNG JPEG::JPEG ZLIB::ZLIB)
  install_targets(/lib ivfimage)
endif()
