include_directories(${ivf_SOURCE_DIR}/include)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivfmath/*.h)

if(IVF_DEBUG)
  add_library(ivfmathd ${INCLUDE_FILES} ${SOURCE_FILES})
  install_targets(/lib ivfmathd)
else()
  add_library(ivfmath ${INCLUDE_FILES} ${SOURCE_FILES})
  install_targets(/lib ivfmath)
endif()
