INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivfwidget/*.h)

IF(BUILD_SHARED_LIBS)
	ADD_DEFINITIONS(-DIVF_DLL -DIVFWIDGET_LIB)
ENDIF(BUILD_SHARED_LIBS)

IF(WIN32)
	IF(IVF_DEBUG)
		ADD_LIBRARY(ivfwidgetd ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivfwidgetd ivfd ivf3duid)
		INSTALL_TARGETS( /lib ivfwidgetd )
	ELSE(IVF_DEBUG)
		ADD_LIBRARY(ivfwidget ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivfwidget ivf ivf3dui )
		INSTALL_TARGETS( /lib ivfwidget )
	ENDIF(IVF_DEBUG)
ELSE(WIN32)
	ADD_LIBRARY(ivfwidget ${SOURCE_FILES})
	TARGET_LINK_LIBRARIES( ivfwidget ivf ivf3dui)
	INSTALL_TARGETS( /lib ivfwidget )
ENDIF(WIN32)


