include_directories(${ivf_SOURCE_DIR}/include)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivfwin32/*.h)

if(IVFDEBUG)
  add_library(ivfwin32d ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivfwin32d ivfd ivfmathd ivfwidgetd)
  install_targets(/lib ivfwin32d)
else()
  add_library(ivfwin32 ${INCLUDE_FILES} ${SOURCE_FILES})
  target_link_libraries(ivfwin32 ivf ivfmath ivfwidget)
  install_targets(/lib ivfwin32)
endif()
