INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.c)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/GL/*.h)

IF(WIN32)
	IF(IVF_DEBUG)
		ADD_LIBRARY(gleivfd ${INCLUDE_FILES} ${SOURCE_FILES})
		INSTALL_TARGETS( /lib gleivfd )
	ELSE(IVF_DEBUG)
		ADD_LIBRARY(gleivf ${INCLUDE_FILES} ${SOURCE_FILES})
		INSTALL_TARGETS( /lib gleivf )
	ENDIF(IVF_DEBUG)
ELSE(WIN32)
	ADD_LIBRARY(gleivf ${SOURCE_FILES})
	INSTALL_TARGETS( /lib gleivf )
ENDIF(WIN32)