INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivf/*.h)

IF(BUILD_SHARED_LIBS)
ADD_DEFINITIONS(-DIVF_DLL -DIVF_LIB)
ENDIF(BUILD_SHARED_LIBS)

IF(IVFWIN32)
	IF(IVFDEBUG)
		ADD_LIBRARY(ivfd ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivfd ivfmathd opengl32 glu32 gled)
		INSTALL_TARGETS(/lib ivfd)
	ELSE(IVFDEBUG)
		ADD_LIBRARY(ivf ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivf ivfmath opengl32 glu32 gle)
		INSTALL_TARGETS(/lib ivf)
	ENDIF(IVFDEBUG)		
ELSE(IVFWIN32)
	ADD_LIBRARY(ivf ${SOURCE_FILES})
	TARGET_LINK_LIBRARIES( ivf ivfmath GL GLU gle )
	INSTALL_TARGETS(/lib ivf)
	INSTALL_FILES(/include/ivf ../../include/ivf/*.h)
ENDIF(IVFWIN32)