INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivf/*.h)

IF(BUILD_SHARED_LIBS)
ADD_DEFINITIONS(-DIVF_DLL -DIVF_LIB)
ENDIF(BUILD_SHARED_LIBS)

IF(WIN32)
	IF(IVF_DEBUG)
		ADD_LIBRARY(ivfd ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivfd ivfmathd opengl32 glu32 gleivfd)
		INSTALL_TARGETS(/lib ivfd)
	ELSE(IVF_DEBUG)
		ADD_LIBRARY(ivf ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivf ivfmath opengl32 glu32 gleivf)
		INSTALL_TARGETS(/lib ivf)
	ENDIF(IVF_DEBUG)		
ELSE(WIN32)
	ADD_LIBRARY(ivf ${SOURCE_FILES})
	IF(APPLE)
		TARGET_LINK_LIBRARIES( ivf ivfmath "-framework Carbon" "-framework Cocoa" "-framework ApplicationServices" "-framework AGL" "-framework OpenGL" gleivf)
	ELSE(APPLE)
		TARGET_LINK_LIBRARIES( ivf ivfmath GL GLU gleivf )
	ENDIF(APPLE)
	INSTALL_TARGETS(/lib ivf)
	INSTALL_FILES(/include/ivf ../../include/ivf/*.h)
ENDIF(WIN32)
