INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivf3dui/*.h)

IF(BUILD_SHARED_LIBS)
	ADD_DEFINITIONS(-DIVF_DLL -DIVF3DUI_LIB)
ENDIF(BUILD_SHARED_LIBS)

IF(IVFWIN32)
	IF(IVFDEBUG)
		ADD_LIBRARY(ivf3duid ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivf3duid ivfd ivfmathd opengl32 GLU32 gled )
		INSTALL_TARGETS(/lib ivf3duid)
	ELSE(IVFDEBUG)
		ADD_LIBRARY(ivf3dui ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivf3dui ivf ivfmath opengl32 GLU32 gle )
		INSTALL_TARGETS(/lib ivf3dui)
	ENDIF(IVFDEBUG)
ELSE(IVFWIN32)
	ADD_LIBRARY(ivf3dui ${SOURCE_FILES})
	TARGET_LINK_LIBRARIES( ivf3dui ivf ivfmath GL GLU gle )
	INSTALL_TARGETS(/lib ivf3dui)
ENDIF(IVFWIN32)

