INCLUDE_DIRECTORIES(${ivf_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${ivf_SOURCE_DIR}/include/ivf3dui/*.h)

IF(BUILD_SHARED_LIBS)
	ADD_DEFINITIONS(-DIVF_DLL -DIVF3DUI_LIB)
ENDIF(BUILD_SHARED_LIBS)

IF(WIN32)
	IF(IVF_DEBUG)
		ADD_LIBRARY(ivf3duid ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivf3duid ivfd ivfmathd opengl32 GLU32 gleivfd )
		INSTALL_TARGETS(/lib ivf3duid)
	ELSE(IVF_DEBUG)
		ADD_LIBRARY(ivf3dui ${INCLUDE_FILES} ${SOURCE_FILES})
		TARGET_LINK_LIBRARIES( ivf3dui ivf ivfmath opengl32 GLU32 gleivf )
		INSTALL_TARGETS(/lib ivf3dui)
	ENDIF(IVF_DEBUG)
ELSE(WIN32)
	ADD_LIBRARY(ivf3dui ${SOURCE_FILES})
	
        IF(APPLE)
                TARGET_LINK_LIBRARIES( ivf3dui ivf ivfmath "-framework Carbon" "-framework Cocoa" "-framework ApplicationServices" "-framework AGL" "-framework OpenGL" gleivf )
        ELSE(APPLE)
                TARGET_LINK_LIBRARIES( ivf3dui ivf ivfmath  GL GLU gleivf )
        ENDIF(APPLE)	
	
	INSTALL_TARGETS(/lib ivf3dui)
ENDIF(WIN32)

